--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<title>Hyperdope Gematria Calculator</title>
+<title>Hyperdope Gematria</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=520, maximum-scale=1, user-scalable=no">
 <link rel="shortcut icon" type="image/x-icon" href="res/favicon.png">
@@ -39,7 +39,7 @@ $(window).load(function(){
 
 <div id="calcMain">
 	<center>
-		<div id="mainLogo">Hyperdope Gematria Calculator</div>
+		<div id="mainLogo">Hyperdope Gematria</div>
 	</center>
 	
 	<center>
