--- a/calc/index.html
+++ b/calc/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Hyperdope Gematria Calculator</title>
+<title>Hyperdope Gematria</title>
 <meta http-equiv="refresh" content="0; URL=https://www.hyperdope.com">
 <link rel="canonical" href="https://www.hyperdope.com">
