--- a/index.html
+++ b/index.html
@@ -1,121 +1,144 @@
 <!DOCTYPE html>
 <head>
-<title>Hyperdope Gematria</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=520, maximum-scale=1, user-scalable=no">
-<link rel="shortcut icon" type="image/x-icon" href="res/favicon.png">
+  <title>Hyperdope Gematria</title>
+  <meta charset="utf-8" />
+  <meta
+    name="viewport"
+    content="width=520, maximum-scale=1, user-scalable=no"
+  />
+  <link rel="shortcut icon" type="image/x-icon" href="res/favicon.png" />
 
-<!-- Android Web App - Add to Home Screen -->
-<link rel="manifest" href="manifest.json">
+  <!-- Android Web App - Add to Home Screen -->
+  <link rel="manifest" href="manifest.json" />
 
-<script src="lib/jquery.min.js"></script>
-<!-- html2canvas v1.0.0-alpha.12 -->
+  <script src="lib/jquery.min.js"></script>
+  <!-- html2canvas v1.0.0-alpha.12 -->
 
-<script src="calc/gematria.js"></script>
-<script src="calc/calc.js"></script>
-<script src="calc/init-variables.js"></script>
-<script src="calc/ciphers.js"></script>
+  <script src="calc/gematria.js"></script>
+  <script src="calc/calc.js"></script>
+  <script src="calc/init-variables.js"></script>
+  <script src="calc/ciphers.js"></script>
 
-<link rel="stylesheet" type="text/css" href="calc/styles.css">
+  <link rel="stylesheet" type="text/css" href="calc/styles.css" />
 
-<script>
-window.onpaint = function() {
-	updateInterfaceColor(true); // update interface color (first run)
-}
-$(window).load(function(){
-	$("#loader").delay(287).fadeOut("fast");
-});
-</script>
-
+  <script>
+    window.onpaint = function () {
+      updateInterfaceColor(true); // update interface color (first run)
+    };
+    $(window).load(function () {
+      $("#loader").delay(287).fadeOut("fast");
+    });
+  </script>
 </head>
 
 <body>
-<!-- initCalc() needs to run before the db loads to create menu properly-->
-<!-- <body onload="initCalc(true)"> --> 
+  <!-- initCalc() needs to run before the db loads to create menu properly-->
+  <!-- <body onload="initCalc(true)"> -->
 
-<div id="loader"></div>
-<canvas id="canv"></canvas>
+  <div id="loader"></div>
+  <canvas id="canv"></canvas>
 
-<!-- preload font -->
-<span style="font-family: 'Roboto Mono';"></span>
+  <!-- preload font -->
+  <span style="font-family: 'Roboto Mono'"></span>
 
-<div id="calcMain">
-	<!-- <left>
-		<div id="mainLogo"><a href="../">Back</a> to Hyperdope Video</div>
-	</left> -->
-	
-	<center>
-		<div id="mainLogo">Hyperdope Gematria</div>
-	</center>
-	
-	<center>
+  <div id="calcMain">
+    <center>
+      <div id="calcLogo">
+        <img src="res/hypercalc_transparent.png" height="50" />
+      </div>
+    </center>
 
-		<div id="calcOptionsPanel"></div>
+    <center>
+      <div id="calcOptionsPanel"></div>
 
-		<div id="colorControlsMenuArea"></div>
-		<div id="editCiphersMenuArea"></div>
-		<div id="dateCalcMenuArea"></div>
+      <div id="colorControlsMenuArea"></div>
+      <div id="editCiphersMenuArea"></div>
+      <div id="dateCalcMenuArea"></div>
 
-		<div id="inputArea">
-		  <input id="queryDBbtn" class="hideValue" type="button" onclick="queryDatabase()" value="Query">
-		  <input id="phraseBox" autofocus type="text" spellcheck="false" autocomplete="off" oninput="updateEnabledCipherTable(); updateWordBreakdown(breakCipher,false,false);" onkeydown="phraseBoxKeypress(event.keyCode)" ondrop="dropHandler(event)" ondragover="dragOverHandler(event)">
-		  <input id="enterPhraseBtn" type="button" onclick="phraseBoxKeypress(13);document.getElementById('phraseBox').focus()" value="&#x270E;">
-		  <input id="highlightBox" type="text" spellcheck="false" autocomplete="off"><span id="clearFilterButton"></span>
-		</div>
+      <div id="inputArea">
+        <input
+          id="queryDBbtn"
+          class="hideValue"
+          type="button"
+          onclick="queryDatabase()"
+          value="Query"
+        />
+        <input
+          id="phraseBox"
+          autofocus
+          type="text"
+          spellcheck="false"
+          autocomplete="off"
+          oninput="updateEnabledCipherTable(); updateWordBreakdown(breakCipher,false,false);"
+          onkeydown="phraseBoxKeypress(event.keyCode)"
+          ondrop="dropHandler(event)"
+          ondragover="dragOverHandler(event)"
+        />
+        <input
+          id="enterPhraseBtn"
+          type="button"
+          onclick="phraseBoxKeypress(13);document.getElementById('phraseBox').focus()"
+          value="&#x270E;"
+        />
+        <input
+          id="highlightBox"
+          type="text"
+          spellcheck="false"
+          autocomplete="off"
+        /><span id="clearFilterButton"></span>
+      </div>
 
-		<div id="enabledCiphTable"></div>
+      <div id="enabledCiphTable"></div>
 
-		<div id="BreakdownDetails">
-			<div id="BreakdownSpot"></div>
-			<div id="ChartSpotScroll"><div id="ChartSpot"></div></div>
-		</div>
-	</center>
+      <div id="BreakdownDetails">
+        <div id="BreakdownSpot"></div>
+        <div id="ChartSpotScroll"><div id="ChartSpot"></div></div>
+      </div>
+    </center>
 
+    <center>
+      <div id="HistoryTableArea"></div>
+    </center>
+  </div>
 
-	<center>	
-		<div id="HistoryTableArea"></div>
-	</center>
-</div>
+  <span id="loadPanel"></span>
 
-<span id="loadPanel"></span>
+  <script src="calc/breakdown.js"></script>
 
-<script src="calc/breakdown.js"></script>
+  <script src="calc/highlighter.js"></script>
+  <script src="calc/export.js"></script>
+  <script src="calc/export-csv.js"></script>
+  <script src="calc/num-prop.js"></script>
+  <script src="calc/edit-ciphers.js"></script>
+  <script src="calc/date-calc.js"></script>
+  <script src="calc/database.js"></script>
+  <script src="calc/quick-guide.js"></script>
 
-<script src="calc/highlighter.js"></script>
-<script src="calc/export.js"></script>
-<script src="calc/export-csv.js"></script>
-<script src="calc/num-prop.js"></script>
-<script src="calc/edit-ciphers.js"></script>
-<script src="calc/date-calc.js"></script>
-<script src="calc/database.js"></script>
-<script src="calc/quick-guide.js"></script>
+  <script src="calc/localstorage.js"></script>
+  <script src="calc/encoding.js"></script>
+  <script src="calc/encoding-ciphers.js"></script>
 
-<script src="calc/localstorage.js"></script>
-<script src="calc/encoding.js"></script>
-<script src="calc/encoding-ciphers.js"></script>
+  <script src="calc/coderain.js"></script>
+  <script src="lib/html2canvas.min.js"></script>
 
-<script src="calc/coderain.js"></script>
-<script src="lib/html2canvas.min.js"></script>
+  <!-- Initialzie the calculator.  This needs to run before loading a database or theme. -->
+  <script>
+    initCalc(true);
+  </script>
 
-<!-- Initialzie the calculator.  This needs to run before loading a database or theme. -->
-<script>
-	initCalc(true);
-</script>
+  <!-- AUTO LOAD DATABASE (DB) -->
+  <!-- To change the word matching database reference a different file in the script below or append lines to db.txt -->
 
-<!-- AUTO LOAD DATABASE (DB) -->
-<!-- To change the word matching database reference a different file in the script below or append lines to db.txt -->
+  <script>
+    var database = loadFile("db.txt");
+    importFileAction(database, true);
+  </script>
 
-<script>
-	var database = loadFile('db.txt');
-	importFileAction(database, true);
-</script>
+  <!-- AUTO LOAD THEME -->
+  <!-- To change the theme uncomment the script below -->
 
-<!-- AUTO LOAD THEME -->
-<!-- To change the theme uncomment the script below -->
-
-<!-- <script>
+  <!-- <script>
 	var theme = loadFile('theme/white-interface.js');
 	importFileAction(theme, true);
 </script> -->
-
 </body>
