--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title>Hyperdope Gematria</title>
+  <title>Hyper Calc</title>
   <meta charset="utf-8" />
   <meta
     name="viewport"
