change menu title to Cyphers and update readme

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title>Hyper Calc</title>
+  <title>Cypher Calc</title>
   <meta charset="utf-8" />
   <meta
     name="viewport"
@@ -44,7 +44,11 @@
   <div id="calcMain">
     <center>
       <div id="calcLogo">
-        <img src="res/hypercalc_transparent.png" height="50" />
+        <!-- Text Logo -->
+        <div>Hyperdope Cypher Calculator</div>
+
+        <!-- Image Logo -->
+        <!-- <img src="res/hypercalc_transparent.png" height="50" /> -->
       </div>
     </center>
 
